--- a/ca1-sem1/ca1_tourism.ipynb
+++ b/ca1-sem1/ca1_tourism.ipynb
@@ -3369,15 +3369,15 @@
     "    y_predict = grid.predict(X_test)\n",
     "    \n",
     "    res = '''\\\n",
-    "    *** Best Params: {params}\n",
-    "    *** Best Estimator: {estimator} \n",
-    "    *** Best Score: {score}\n",
+    "    Best Params: {params}\n",
+    "    Best Estimator: {estimator} \n",
+    "    Best Score: {score}\n",
     "\n",
     "    Crosstab:\\n\n",
-    "            {crosstab}\n",
+    "    {crosstab}\n",
     "\n",
     "    Classification Report: \\n\n",
-    "            {report}\n",
+    "    {report}\n",
     "            \\\n",
     "            '''.format(params=grid.best_params_, \n",
     "                       estimator=grid.best_estimator_, \n",
