--- a/ca1-sem1/ca1_tourism.ipynb
+++ b/ca1-sem1/ca1_tourism.ipynb
@@ -4308,16 +4308,14 @@
    ],
    "source": [
     "#### IMPORTANT ####\n",
-    "# Takes 59 mins to run - do not rerun, unless necessary\n",
+    "# Takes 59 mins to run\n",
     "#### IMPORTANT ####\n",
-    "rand_forest_params = { \n",
-    "    'n_estimators': list(range(200,801,150)), # [200, 350, 500, 650, 800]\n",
-    "    'max_features': ['sqrt', 'log2'],\n",
-    "    'max_depth' : list(range(400,1201,400)), # [400, 800, 1200]\n",
-    "    'criterion' :['gini', 'entropy']\n",
-    "}\n",
-    "\n",
-    "res = run_GridSearch(RandomForestClassifier(), rand_forest_params,\n",
+    "res = run_GridSearch(RandomForestClassifier(), \n",
+    "                     { 'n_estimators': list(range(200,801,150)), # [200, 350, 500, 650, 800]\n",
+    "                       'max_features': ['sqrt', 'log2'],\n",
+    "                       'max_depth' : list(range(400,1201,400)), # [400, 800, 1200]\n",
+    "                       'criterion' :['gini', 'entropy']\n",
+    "                    },\n",
     "                    X_train_resampled, y_train_resampled, X_test, y_test)\n",
     "\n",
     "with open('cross-val/RandomForestClassifier-GridSearch.txt', 'w') as f:\n",
