brushing things up as i am writing report anf export figures

--- a/ca1-sem1/ca1_tourism.ipynb
+++ b/ca1-sem1/ca1_tourism.ipynb
@@ -11771,7 +11771,10 @@
       "[CV 2/5] END .......................max_iter=20;, score=0.547 total time=  51.1s\n",
       "[CV 3/5] END .......................max_iter=20;, score=0.575 total time=  52.7s\n",
       "[CV 4/5] END .......................max_iter=20;, score=0.522 total time=  49.6s\n",
-      "[CV 5/5] END .......................max_iter=20;, score=0.447 total time=  49.9s\n"
+      "[CV 5/5] END .......................max_iter=20;, score=0.447 total time=  49.9s\n",
+      "[CV 1/5] END .......................max_iter=50;, score=0.331 total time= 1.8min\n",
+      "[CV 2/5] END .......................max_iter=50;, score=0.561 total time= 1.8min\n",
+      "[CV 3/5] END .......................max_iter=50;, score=0.589 total time= 1.8min\n"
      ]
     }
    ],
