--- a/ca1-sem1/ca1_tourism.ipynb
+++ b/ca1-sem1/ca1_tourism.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "## Table of Content:\n",
     "* [Data Preparation & Visualisation](#data-prep-viz)\n",
-    "* [Machine Learning](#ml)"
+    "* [Machine Learning](#ml):\n",
+    "  * [Utils](#utils)\n",
+    "  * [Dataset Balancing](#balancing)\n",
+    "  * [Trees and Ensemble](#trees-ensemble)"
    ]
   },
   {
@@ -2592,13 +2595,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 174,
    "id": "c969f2d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(47371, 11)"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#merged_df.replace([np.inf, -np.inf, 0], np.nan, inplace=True)\n",
-    "merged_df = merged_df.dropna()"
+    "merged_df = merged_df.dropna()\n",
+    "merged_df.shape"
    ]
   },
   {
@@ -3773,6 +3788,14 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "2cacf747",
+   "metadata": {},
+   "source": [
+    "### ML Utility Functions <a class=\"anchor\" id=\"utils\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "id": "8936215e",
@@ -3912,7 +3935,7 @@
    "id": "0626ecd4",
    "metadata": {},
    "source": [
-    "### Iteration 2: Try Balancing the dataset\n",
+    "### Balancing the dataset <a class=\"anchor\" id=\"balancing\"></a>\n",
     "I am working with an imbalanbced dataset, where the number of observations for the Dublin airport is over triple the other airports. Try to resample."
    ]
   },
@@ -4200,7 +4223,7 @@
    "id": "4f6756c2",
    "metadata": {},
    "source": [
-    "## Tree & Ensemble models"
+    "### Tree & Ensemble models <a class=\"anchor\" id=\"trees-ensemble\"></a>"
    ]
   },
   {
