finish prediction visualization

--- a/ca2-sem1/ca2.ipynb
+++ b/ca2-sem1/ca2.ipynb
@@ -4367,7 +4367,7 @@
     "    validation_data = {}\n",
     "    models = {}\n",
     "\n",
-    "    for metric in ['Yield', 'Production']:\n",
+    "    for metric in ['Yield', 'Production']: # Could optimize the code by moving this forloop into the innermost for loop, so the data for same crop + country can be retrived just once for both metrics\n",
     "        for area in df_unstacked.area.unique():\n",
     "            area_data = df_unstacked[(df_unstacked.area == area)].reset_index()\n",
     "            area_data = area_data.dropna()\n",
@@ -8501,7 +8501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "id": "01961f0d",
    "metadata": {},
    "outputs": [
@@ -8669,7 +8669,7 @@
        "[6972 rows x 6 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
