build data from two agri posts for sentiment analysis

--- a/ca2-sem1/ca2.ipynb
+++ b/ca2-sem1/ca2.ipynb
@@ -8910,18 +8910,391 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "af3aac22-5b14-4030-b62c-c4d34d9e414d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "https://www.kaggle.com/code/michawilkosz/twitter-sentiment-analysis-using-tensorflow"
+    "# https://www.kaggle.com/code/michawilkosz/twitter-sentiment-analysis-using-tensorflow"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce23c358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://github.com/reddit-archive/reddit/wiki/OAuth2#getting-started\n",
+    "\n",
+    "# redirect URL http://localhost:8080"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "id": "8bb70080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import getenv\n",
+    "from dotenv import load_dotenv\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from datetime import datetime as dt\n",
+    "import praw\n",
+    "\n",
+    "from praw.models import MoreComments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "0f68978b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "\n",
+    "APP_NAME = getenv(\"APP_NAME\")\n",
+    "APP_ID = getenv(\"APP_ID\")\n",
+    "APP_SECRET = getenv(\"APP_SECRET\")\n",
+    "REDDIT_NAME = getenv(\"REDDIT_NAME\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "02e56bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reddit = praw.Reddit(\n",
+    "    client_id = APP_ID,\n",
+    "    client_secret = APP_SECRET,\n",
+    "    user_agent = f\"{APP_NAME} u/{REDDIT_NAME}\"\n",
+    ")\n",
+    "print(reddit.read_only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "49ed592e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artist Creates Realistic Sculpture Of Leo Varadkar To Highlight \"Current Housing Disaster\" In Ireland...\n",
+      "1cpni3r\n",
+      "Arts/Culture\n",
+      "1715451073.0\n",
+      "2024-05-11 19:11:13\n",
+      "The aurora boreanaz last night.\n",
+      "1cpngq4\n",
+      "Northern Lights\n",
+      "1715450967.0\n",
+      "2024-05-11 19:09:27\n",
+      "Feel like I'm the only one who didn't see them\n",
+      "1cpn9cb\n",
+      "Northern Lights\n",
+      "1715450413.0\n",
+      "2024-05-11 19:00:13\n",
+      "Northern lights in Dublin\n",
+      "1cplp10\n",
+      "Northern Lights\n",
+      "1715446030.0\n",
+      "2024-05-11 17:47:10\n",
+      "Where in Ireland has the most beautiful waters? And natural scenery in general? I will have to go with both Kerry and Galway, but what do you think?\n",
+      "1cpl8az\n",
+      "Gaeilge\n",
+      "1715444717.0\n",
+      "2024-05-11 17:25:17\n",
+      "Are we America now?\n",
+      "1cpkw25\n",
+      "Education\n",
+      "1715443807.0\n",
+      "2024-05-11 17:10:07\n",
+      "Rare Aurora sighting keeps us up all night.\n",
+      "1cpkm1r\n",
+      "Northern Lights\n",
+      "1715443050.0\n",
+      "2024-05-11 16:57:30\n",
+      "Thousands march through Nenagh over nursing home plans\n",
+      "1cpkkm6\n",
+      "News\n",
+      "1715442934.0\n",
+      "2024-05-11 16:55:34\n",
+      "Aurora Borealis, Maynooth.\n",
+      "1cpk8lj\n",
+      "Northern Lights\n",
+      "1715441995.0\n",
+      "2024-05-11 16:39:55\n",
+      "Carlow heroes save woman who had been assaulted before being thrown into river. \n",
+      "1cpjpes\n",
+      "Culchie Club Only\n",
+      "1715440483.0\n",
+      "2024-05-11 16:14:43\n"
+     ]
+    }
+   ],
+   "source": [
+    "SUBREDDIT_TITLE = \"ireland\"\n",
+    "SUBREDDIT_POST_LIMIT = 10\n",
+    "\n",
+    "subreddit = reddit.subreddit(SUBREDDIT_TITLE)\n",
+    "for post in subreddit.new(limit=SUBREDDIT_POST_LIMIT):\n",
+    "    print(post.title)\n",
+    "    print(post.id)\n",
+    "    print(post.link_flair_text)\n",
+    "    print(post.created_utc)\n",
+    "    print(dt.fromtimestamp(post.created_utc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "01849289",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.reddit.com/dev/api/#POST_api_comment\n",
+    "\n",
+    "comments = []\n",
+    "\n",
+    "def get_all_comments(comment, level):\n",
+    "    if isinstance(comment, MoreComments): #https://praw.readthedocs.io/en/latest/tutorials/comments.html#extracting-comments-with-praw\n",
+    "        return\n",
+    "    \n",
+    "    try:\n",
+    "        comments.append([\n",
+    "            level,\n",
+    "            comment.body,\n",
+    "            comment.gilded,\n",
+    "            comment.likes,\n",
+    "            comment.num_reports,\n",
+    "            comment.score,\n",
+    "            comment.subreddit\n",
+    "        ])\n",
+    "    except Exception as e:\n",
+    "        print('Could not retries the comment, skipping. Error: ', e)\n",
+    "\n",
+    "    if comment.replies:\n",
+    "        for reply in comment.replies:\n",
+    "            get_all_comments(reply, level + 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "8085cce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Post ID  w0c2mx contains  457  comments\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Could not retries the comment, skipping. Error:  'MoreComments' object has no attribute 'body'\n",
+      "Post ID  16g9big contains  62  comments\n"
+     ]
+    }
+   ],
+   "source": [
+    "for post_id in ['w0c2mx', '16g9big']:\n",
+    "    submission = reddit.submission(post_id)\n",
+    "    print('Post ID ', post_id, 'contains ', submission.num_comments, ' comments') # Will be used to validate the resulting dataframes and identify if some comments have been missed\n",
+    "\n",
+    "    for comment in submission.comments:        \n",
+    "        get_all_comments(comment, level=0)\n",
+    "        comments_pd = pd.DataFrame(comments, columns=[\n",
+    "                'level',\n",
+    "                'body',\n",
+    "                'gilded',\n",
+    "                'likes',\n",
+    "                'num_reports',\n",
+    "                'score',\n",
+    "                'subreddit',\n",
+    "        ])\n",
+    "        comments_pd.to_csv(f\"sentiment_data/{post_id}.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e559c869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.reddit.com/r/ireland/comments/16g9big/what_do_you_think_of_the_current_state_of_the/   ->> 62 comments\n",
+    "# https://www.reddit.com/r/ireland/comments/w0c2mx/popular_among_the_farming_community/ --->>> 457 comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "46db68da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1275, 7)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1337, 7)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent_1_pd = pd.read_csv('sentiment_data/w0c2mx.csv')\n",
+    "sent_1_pd.shape\n",
+    "\n",
+    "sent_2_pd = pd.read_csv('sentiment_data/16g9big.csv')\n",
+    "sent_2_pd.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "d6a5748b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level</th>\n",
+       "      <th>body</th>\n",
+       "      <th>gilded</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>num_reports</th>\n",
+       "      <th>score</th>\n",
+       "      <th>subreddit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I propose we use less cows but make them bigge...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>54</td>\n",
+       "      <td>ireland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Ah, the \"belgian blue\" strategy. Interesting</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
+       "      <td>ireland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Ryan poisoned the well with rural voters alrea...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>112</td>\n",
+       "      <td>ireland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>&gt;Any suggestion on policy towards farmers from...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>99</td>\n",
+       "      <td>ireland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>You have one branch of government trying to ke...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31</td>\n",
+       "      <td>ireland</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   level                                               body  gilded  likes  \\\n",
+       "0      0  I propose we use less cows but make them bigge...       0    NaN   \n",
+       "1      1       Ah, the \"belgian blue\" strategy. Interesting       0    NaN   \n",
+       "2      0  Ryan poisoned the well with rural voters alrea...       0    NaN   \n",
+       "3      1  >Any suggestion on policy towards farmers from...       0    NaN   \n",
+       "4      2  You have one branch of government trying to ke...       0    NaN   \n",
+       "\n",
+       "   num_reports  score subreddit  \n",
+       "0          NaN     54   ireland  \n",
+       "1          NaN     14   ireland  \n",
+       "2          NaN    112   ireland  \n",
+       "3          NaN     99   ireland  \n",
+       "4          NaN     31   ireland  "
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent_1_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1784e91f",
    "metadata": {},
    "outputs": [],
    "source": []
