--- a/ca2-sem1/ca2.ipynb
+++ b/ca2-sem1/ca2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "75937b4e-3731-42ff-9f55-17ea72d070e6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "8312b1dd",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "id": "5db1dc47",
    "metadata": {},
    "outputs": [],
@@ -8950,7 +8950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8bb70080",
    "metadata": {},
    "outputs": [],
@@ -8969,6 +8969,9 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import requests\n",
+    "import requests.auth\n",
     "\n"
    ]
   },
@@ -8982,21 +8985,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "0f68978b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv()\n",
     "\n",
@@ -9011,21 +9003,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "93f808e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"APP_NAME\"] = 'olena-cct'\n",
-    "os.environ[\"APP_ID\"] = '2o2rSr9VabbH8sbyUGzysA'\n",
-    "os.environ[\"APP_SECRET\"] = 'FrTcKupCPCsI3E2eZ-whXfe5jgY4pg'\n",
-    "os.environ[\"REDDIT_NAME\"] = 'Next-Net1405'\n",
-    "os.environ[\"REDDIT_PASSWORD\"] = \"rGK9aHGXhf2E\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "bd8ac4f9",
    "metadata": {},
@@ -9036,26 +9013,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "bfc7ae07",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'eyJhbGciOiJSUzI1NiIsImtpZCI6IlNIQTI1NjpzS3dsMnlsV0VtMjVmcXhwTU40cWY4MXE2OWFFdWFyMnpLMUdhVGxjdWNZIiwidHlwIjoiSldUIn0.eyJzdWIiOiJsb2lkIiwiZXhwIjoxNzE1Nzk5Njc5LjIxNjgzLCJpYXQiOjE3MTU3MTMyNzkuMjE2ODI5LCJqdGkiOiJYaHdaWFRDVnNkWm5IZmI0M0J0bFlaMXhlZkQwaHciLCJjaWQiOiIybzJyU3I5VmFiYkg4c2J5VUd6eXNBIiwibGlkIjoidDJfMTBkNGJ6dzNocyIsImxjYSI6MTcxNTcxMzI3OTIwMywic2NwIjoiZUp5S1Z0SlNpZ1VFQUFEX193TnpBU2MiLCJmbG8iOjZ9.jDyoUSqBABxpsuYwHX_dlaHbociDXjUtnDQT-Mg1jY_mRXMxVmrlhq6VBLO1QXLf7ZPZ7S2QWkZGqwUWgymBMj3aaxnCHEEF9zzbXhMxvvVbEP5WRS7eM_AT-gPQI-SNFv84TAWDSHytAO_gz6qsSEKqLOlcm_TP1U4B1XokqOiIgd23hzixx6SCbQ_J6O_R9WUNJlVaK3EOeKJGfe2v0GEsssbLpd82vHlVWq6XCUShT1-U87s2Ric_07XLUvXhyA8px_vcqvoDfHnkG31m0NrETSMAqaaBMR3eVuKt-awmxU5KyysNWzkO-4xYZE6jazQe0CSV0ElzaS_V6GnXOA'"
+       "'eyJhbGciOiJSUzI1NiIsImtpZCI6IlNIQTI1NjpzS3dsMnlsV0VtMjVmcXhwTU40cWY4MXE2OWFFdWFyMnpLMUdhVGxjdWNZIiwidHlwIjoiSldUIn0.eyJzdWIiOiJsb2lkIiwiZXhwIjoxNzE2MjIxODI2Ljk2NTk4MSwiaWF0IjoxNzE2MTM1NDI2Ljk2NTk4LCJqdGkiOiJobnNTUk5Qckc5OGl5M3dBdGJJZi1MQjJOQWE3R2ciLCJjaWQiOiIybzJyU3I5VmFiYkg4c2J5VUd6eXNBIiwibGlkIjoidDJfMTBwNjVzdXIzbCIsImxjYSI6MTcxNjEzNTQyNjk1Mywic2NwIjoiZUp5S1Z0SlNpZ1VFQUFEX193TnpBU2MiLCJmbG8iOjZ9.MrbQ2Fina0zJ9_FkFhYTknDz9yPh82uOjUQUGJu02DJ2eI_OMD8D4ygYyxVcfxKrsItDkCzi7wfDI6KtV0xTbLN5GlEXGFMfgOKLB_U40Y8ri_krbNsbvyeQImEaOdKxdRl7hXiyDmUTvV3bnoU93x2WNa_-krCpgpavBf0l-0EODHuqVO3bbB1xuJxKRoNz5IdbDWucDVtlbiUe_nZk7wVPFplrPbcEcvbFw-q-2nVHtol94DvdfIW-_MzAK3UE5HY6XeN7bpsosn34fv6vMbUlBiO4C67UXDjUfAzNNjH6rEQToUfo95r9ibGp3yawfEZQNKEEE2P5hlIsOfiusA'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import requests\n",
-    "import requests.auth\n",
     "client_auth = requests.auth.HTTPBasicAuth(APP_ID, APP_SECRET)\n",
     "post_data = {\"grant_type\": \"client_credentials\", \"username\": APP_ID, \"password\": APP_SECRET, 'redirect_uri': REDIRECT_URL}\n",
+    "headers = {'User-Agent': f'MacOS:{APP_NAME}:v1.0 (by /u/{REDDIT_USERNAME})'}\n",
     "response = requests.post(\"https://www.reddit.com/api/v1/access_token\", auth=client_auth, data=post_data, headers=headers)\n",
     "access_token = response.json()['access_token']\n",
     "access_token"
@@ -9063,13 +9039,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "0e182c75",
    "metadata": {},
    "outputs": [],
    "source": [
     "headers = {'Authorization': f\"bearer {access_token}\"}\n",
-    "res = requests.get(\"https://oauth.reddit.com/r/science/search/?q=crop+AND+yield&limit=50\",\n",
+    "\n",
+    "SUBREDDIT = 'science'\n",
+    "QUERY = 'crop+AND+yield'\n",
+    "\n",
+    "res = requests.get(f\"https://oauth.reddit.com/r/{SUBREDDIT}/search/?q={QUERY}&limit=50\",\n",
     "                   headers=headers)"
    ]
   },
@@ -9375,7 +9355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "id": "46db68da",
    "metadata": {},
    "outputs": [
@@ -9400,13 +9380,7 @@
       "195z2xo.csv (4, 8)\n",
       "10hso0q.csv (36, 8)\n",
       "1cbqepv.csv (46, 8)\n",
-      "7ysj9i.csv (433, 8)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "7ysj9i.csv (433, 8)\n",
       "wk2emz.csv (490, 8)\n",
       "1cq36r9.csv (8, 8)\n",
       "195wt0c.csv (7, 8)\n",
@@ -9447,7 +9421,7 @@
        "(6555, 8)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9462,7 +9436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 24,
    "id": "d6a5748b",
    "metadata": {},
    "outputs": [
@@ -9573,7 +9547,7 @@
        "4      0            0     38  worldnews  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9684,7 +9658,7 @@
        "6554       0      0            0      1  climatechange  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9697,7 +9671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "1784e91f",
    "metadata": {},
    "outputs": [],
@@ -9708,7 +9682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "id": "94157d2b",
    "metadata": {},
    "outputs": [],
@@ -9725,7 +9699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 27,
    "id": "278ff851",
    "metadata": {},
    "outputs": [],
@@ -9744,7 +9718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 28,
    "id": "98228c32",
    "metadata": {},
    "outputs": [],
@@ -9755,7 +9729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 29,
    "id": "4022e11f",
    "metadata": {},
    "outputs": [
@@ -9774,27 +9748,10 @@
        "True"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nltk.download('vader_lexicon')\n",
-    "analyzer = SentimentIntensityAnalyzer()\n",
-    "\n",
-    "scores_ser = sentiment_df.body_clean.apply(lambda comment: analyzer.polarity_scores(comment))\n",
-    "scores_df = pd.DataFrame(list(scores_ser))\n",
-    "\n",
-    "sentiment_df = pd.concat([sentiment_df, scores_df], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "id": "f89b2c00",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
@@ -9812,18 +9769,24 @@
        "Name: body_clean, Length: 6555, dtype: object"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Documentation https://www.nltk.org/_modules/nltk/sentiment/vader.html\n",
+    "\n",
+    "nltk.download('vader_lexicon')\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "scores_ser = sentiment_df.body_clean.apply(lambda comment: analyzer.polarity_scores(comment))\n",
     "scores_ser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 30,
    "id": "f8596346",
    "metadata": {},
    "outputs": [
@@ -9945,18 +9908,180 @@
        "max       1.000000     1.000000     1.000000     0.999400  5228.000000     0.0"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>level</th>\n",
+       "      <th>body</th>\n",
+       "      <th>gilded</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>num_reports</th>\n",
+       "      <th>score</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>body_clean</th>\n",
+       "      <th>vader_neg</th>\n",
+       "      <th>vader_neu</th>\n",
+       "      <th>vader_pos</th>\n",
+       "      <th>vader_compound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2heown</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I'm an Iowa farmer. Crop yields are literally ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2445</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>im an iowa farmer crop yields are literally my...</td>\n",
+       "      <td>0.045</td>\n",
+       "      <td>0.857</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>0.8996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2heown</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Thank you for this. While these types of stori...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1721</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>thank you for this while these types of storie...</td>\n",
+       "      <td>0.122</td>\n",
+       "      <td>0.694</td>\n",
+       "      <td>0.184</td>\n",
+       "      <td>0.9249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2heown</td>\n",
+       "      <td>2</td>\n",
+       "      <td>These are all very important points that peopl...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>these are all very important points that peopl...</td>\n",
+       "      <td>0.144</td>\n",
+       "      <td>0.678</td>\n",
+       "      <td>0.179</td>\n",
+       "      <td>0.1761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2heown</td>\n",
+       "      <td>3</td>\n",
+       "      <td>The problems with science-base journalism aren...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>the problems with sciencebase journalism arent...</td>\n",
+       "      <td>0.178</td>\n",
+       "      <td>0.747</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>-0.7140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2heown</td>\n",
+       "      <td>4</td>\n",
+       "      <td>&gt; The problems with science-base journalism ar...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>worldnews</td>\n",
+       "      <td>the problems with sciencebase journalism aren...</td>\n",
+       "      <td>0.099</td>\n",
+       "      <td>0.872</td>\n",
+       "      <td>0.028</td>\n",
+       "      <td>-0.8906</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  post_id  level                                               body  gilded  \\\n",
+       "0  2heown      0  I'm an Iowa farmer. Crop yields are literally ...       1   \n",
+       "1  2heown      1  Thank you for this. While these types of stori...       1   \n",
+       "2  2heown      2  These are all very important points that peopl...       0   \n",
+       "3  2heown      3  The problems with science-base journalism aren...       0   \n",
+       "4  2heown      4  > The problems with science-base journalism ar...       0   \n",
+       "\n",
+       "   likes  num_reports  score  subreddit  \\\n",
+       "0      0            0   2445  worldnews   \n",
+       "1      0            0   1721  worldnews   \n",
+       "2      0            0     71  worldnews   \n",
+       "3      0            0     34  worldnews   \n",
+       "4      0            0     38  worldnews   \n",
+       "\n",
+       "                                          body_clean  vader_neg  vader_neu  \\\n",
+       "0  im an iowa farmer crop yields are literally my...      0.045      0.857   \n",
+       "1  thank you for this while these types of storie...      0.122      0.694   \n",
+       "2  these are all very important points that peopl...      0.144      0.678   \n",
+       "3  the problems with sciencebase journalism arent...      0.178      0.747   \n",
+       "4   the problems with sciencebase journalism aren...      0.099      0.872   \n",
+       "\n",
+       "   vader_pos  vader_compound  \n",
+       "0      0.098          0.8996  \n",
+       "1      0.184          0.9249  \n",
+       "2      0.179          0.1761  \n",
+       "3      0.075         -0.7140  \n",
+       "4      0.028         -0.8906  "
+      ]
+     },
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentiment_df[['neg', 'neu', 'pos', 'compound', 'score', 'likes']].describe()"
+    "scores_df = pd.DataFrame(list(scores_ser))\n",
+    "\n",
+    "sentiment_df = pd.concat([sentiment_df, scores_df], axis=1)\n",
+    "\n",
+    "sentiment_df[['neg', 'neu', 'pos', 'compound', 'score', 'likes']].describe()\n",
+    "\n",
+    "sentiment_df.rename(columns={'neg': 'vader_neg', 'neu': 'vader_neu', 'pos': 'vader_pos', 'compound': 'vader_compound'}, inplace=True)\n",
+    "sentiment_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 32,
    "id": "e0ef2c16",
    "metadata": {},
    "outputs": [
@@ -9964,19 +10089,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 1e+03 ns, total: 5 µs\n",
-      "Wall time: 31 µs\n"
+      "CPU times: user 2 µs, sys: 1 µs, total: 3 µs\n",
+      "Wall time: 4.05 µs\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc72d79944434322aeeccaab7d2561c1",
+       "model_id": "8066e215a3b44439a200321c9f189759",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='sent_type', options=('neg', 'neu', 'pos', 'compound'), value='neg'…"
+       "interactive(children=(Dropdown(description='sent_type', options=('vader_neg', 'vader_neu', 'vader_pos', 'vader…"
       ]
      },
      "metadata": {},
@@ -9990,12 +10115,12 @@
     "max_score = max(sentiment_df.score)\n",
     "\n",
     "@interact\n",
-    "def view_sentiment(sent_type=['neg', 'neu', 'pos', 'compound'], \n",
+    "def view_sentiment(sent_type=['vader_neg', 'vader_neu', 'vader_pos', 'vader_compound'], \n",
     "                   vader_score=widgets.FloatSlider(min=-1, max=1, step=0.1, value=0.2), \n",
     "                   score=widgets.IntSlider(min=min_score, max=max_score, step=1, value=min_score),\n",
     "                   body_search=''\n",
     "                   ):\n",
-    "    return sentiment_df[(sentiment_df.score >= score) & (sentiment_df[sent_type] < vader_score) & (sentiment_df.body_clean.str.contains(body_search))]"
+    "    return sentiment_df[(sentiment_df.score >= score) & (sentiment_df[sent_type] >= vader_score) & (sentiment_df.body_clean.str.contains(body_search))]"
    ]
   },
   {
@@ -10188,10 +10313,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2b94eb0",
+   "metadata": {},
+   "source": [
+    "### BERT "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86fe5057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://colab.research.google.com/drive/1PHv-IRLPCtv7oTcIGbsgZHqrB5LPvB7S#scrollTo=fH8xHMfdX974"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9b934011",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install -q -U watermark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "41a35256",
    "metadata": {},
    "source": [
-    "Using Bag of Words & CountVectorizer"
+    "### Bag of Words & CountVectorizer"
    ]
   },
   {
